Updates in Rest controllers changes in names
